# headtrack_ar-university

./: .gitignore  README.md  pyproject.toml
headtrack_ar/: __init__.py  config.py  demo.py  detector.py  overlay.py  tracker.py  types.py  video_source.py
tests/: README.md  __init__.py  run_all_tests.py  test_basic.py  test_conditions.py  test_detector.py  test_error_handling.py  test_integration.py  test_performance.py  test_utils.py  test_video_source.py
